simple/test/features/errors/semantic/e1035_invalid_self_context.spl
# E1035: Invalid Self Context

Feature: E1035 - Self in Invalid Context
  As a Simple compiler
  I want to detect `self` used in invalid contexts
  So that self is only used where valid

  Background:
    Given I have the Simple compiler

  Scenario: Self in free function
    When I compile:
      '''
      fn standalone():
        print(self.value)  # Error: self not valid in free function
      '''
    Then I should see error E1035 at line 2
    And the error message should be "`self` cannot be used in this context"
    And the label should indicate "`self` not valid here"
    And the help should suggest "use `self` only in methods or associated functions"

  Scenario: Self at module level
    When I compile:
      '''
      val x = self.value  # Error: self at module level
      '''
    Then I should see error E1035

  Scenario: Valid self in method
    When I compile:
      '''
      struct Counter:
        value: i32

      impl Counter:
        fn get() -> i32:
          self.value  # OK: instance method
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        print(self.value)
      '''
    Then I should see error E1035
    And the error message should contain "잘못된 Self 컨텍스트"
